--- a/templates/admin/user_edit.html
+++ b/templates/admin/user_edit.html
@@ -25,6 +25,7 @@
         <span style="color: #2e802e;">Активен</span>
     {% endif %}
     <br>
+
     <form method="post" style="margin-top:10px;">
         {% if user.is_blocked %}
             <button type="submit" name="action" value="unblock" class="btn">Разблокировать</button>
@@ -32,6 +33,18 @@
             <button type="submit" name="action" value="block" class="btn btn-outline" onclick="return confirm('Заблокировать пользователя?')">Заблокировать</button>
         {% endif %}
     </form>
+
+    {% if user_viewer and user_viewer.id != user.id %}
+    <form method="post" style="margin-top:10px;" onsubmit="return confirm('Удалить пользователя? Это действие нельзя будет отменить.');">
+        <button type="submit"
+                name="action"
+                value="delete"
+                class="btn btn-outline"
+                style="border-color:#ba2b2b;color:#ba2b2b;">
+            Удалить пользователя
+        </button>
+    </form>
+    {% endif %}
 </div>
 
 <p style="margin-top: 26px;">
